# compare_argparser_python

./: .gitignore  README.md  pyproject.toml
compare_argparser/cat/: cat.py  cli_cement.py  cli_click.py  cli_fire.py  cli_plac.py  cli_standard.py  cli_standard_with_typehint.py  cli_tap.py
tests/: test_compare_argparser.py
