[tool.poetry]
name = "compare_argparser"
version = "0.1.0"
description = ""
authors = ["masinc <masinc000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.902"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
ipython = "^7.24.1"
fire = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
